refactored index file

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,14 +6,13 @@
     <title>Campus Map</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
-        /* Ensure the map takes full width */
         #map {
-            height: 1080px; /* You can adjust this height based on your requirements */
+            height: 1080px;
             width: 100%;
         }
         .container {
-            max-width: 1080px; /* Limit the width for larger devices */
-            margin: auto;  /* Centering the container */
+            max-width: 1080px;
+            margin: auto;
         }
     </style>
 </head>
