integrated floor plan

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,6 +43,8 @@
                 </div>
             </div>
             <button type="submit" class="btn btn-primary btn-block">Get Directions</button>
+            <!-- Access Floor Plan button -->
+    <a href="https://unifloorplan-ba89fd879204.herokuapp.com/" class="btn btn-primary btn-block mt-2" target="_blank">Access Floor Plan</a>
         </form>
 
         <!-- Map display -->
